# srdp

./: CMakeLists.txt  README.md  default.nix  flake.nix  package.nix
.github/workflows/: nix-build.yml
src/: cmake_config.h.in  config.cpp  config.h  config_test.cpp  experiment.cpp  experiment.h  experiment_test.cpp  files.cpp  files.h  files_test.cpp  ignore_file.cpp  ignore_file.h  main.cpp  project.cpp  project.h  project_test.cpp  sql.cpp  sql.h  sql_test.cpp  srdp.cpp  srdp.h  srdp_test.cpp  utils.h
